k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bramen-org
  labels:
    app: bramen-org
