k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bramen-org
  namespace: bramen-org
  labels:
    app: bramen-org
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bramen-org
  template:
    metadata:
      labels:
        app: bramen-org
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: bramen-org
          image: ghcr.io/bramendev/bramen.org:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
